delete operation implemented in teacher and student